--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -439,9 +439,9 @@
     <string name="conditions_lowercase_label" description="Lowercase label used to show the user's data about medical conditions [CHAR_LIMIT=50]">conditions</string>
     <string name="conditions_content_description" description="Content description for switch that enables permissions for reading the user's data about medical conditions [CHAR_LIMIT=NONE]">Read conditions</string>
 
-    <string name="immunizations_uppercase_label" description="Uppercase label used to show the user's immunization data [CHAR_LIMIT=50]">Vaccines</string>
-    <string name="immunizations_lowercase_label" description="Lowercase label used to show the user's immunization data [CHAR_LIMIT=50]">vaccines</string>
-    <string name="immunizations_content_description" description="Content description for switch that enables permissions for reading the user's immunization data [CHAR_LIMIT=NONE]">Read vaccines</string>
+    <string name="vaccines_uppercase_label" description="Uppercase label used to show the user's vaccine data [CHAR_LIMIT=50]">Vaccines</string>
+    <string name="vaccines_lowercase_label" description="Lowercase label used to show the user's vaccine data [CHAR_LIMIT=50]">vaccines</string>
+    <string name="vaccines_content_description" description="Content description for switch that enables permissions for reading the user's vaccine data [CHAR_LIMIT=NONE]">Read vaccines</string>
 
     <string name="laboratory_results_uppercase_label" description="Uppercase label used to show the user's laboratory results data [CHAR_LIMIT=50]">Lab results</string>
     <string name="laboratory_results_lowercase_label" description="Lowercase label used to show the user's laboratory results data [CHAR_LIMIT=50]">lab results</string>
