--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -427,6 +427,8 @@
     <!--endregion-->
 
     <!-- region Medical data types -->
+    <string name="browse_health_records_intro" description="Top intro for the Browse health records screen that lists the available Health records categories in Health Connect. [CHAR_LIMIT=NONE]">This includes all the health records synced to and added to Health&#160;Connect. This might not be your full medical record and does not include a medical description of your health records.</string>
+
     <string name="all_medical_data_uppercase_label" description="Uppercase label used to show the user's active calories burned data [CHAR_LIMIT=50]">All health records</string>
     <string name="all_medical_data_lowercase_label" description="Lowercase label used to show the user's active calories burned data [CHAR_LIMIT=50]">all health records</string>
     <string name="all_medical_data_content_description" description="Content description for switch that enables permissions for writing the user's medical data [CHAR_LIMIT=NONE]">Write all health records</string>
