--- a/apk/res/values-ky-watch/strings.xml
+++ b/apk/res/values-ky-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Ар дайым"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Колдонмону пайдаланууда"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Ар дайым"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Фитнес жана саламаттык"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Дене бойду чыңдоо жана саламаттык"</string>
 </resources>
