--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -1627,6 +1627,13 @@
     <!-- endregion -->
     <!-- endregion -->
 
+    <!-- region Show/hide system apps menu -->
+    <!-- [CHAR LIMIT=NONE] Menu for manage permissions to control whether system apps are shown -->
+    <string name="menu_show_system">Show system</string>
+    <!-- [CHAR LIMIT=NONE] Menu for manage permissions to control whether system apps are hidden -->
+    <string name="menu_hide_system">Hide system</string>
+    <!-- endregion -->
+
     <!-- region Wear -->
 
     <!-- region Necessary strings to use wear SystemUI copy. -->
